--- a/OOAD_final/pom.xml
+++ b/OOAD_final/pom.xml
@@ -5,7 +5,9 @@
 	<artifactId>OOAD-springmvc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-
+	
+	
+    
 	<dependencies>
 		<dependency>
 			<groupId>javax</groupId>
@@ -54,7 +56,7 @@
 			<artifactId>bootstrap-datepicker</artifactId>
 			<version>1.0.1</version>
 		</dependency>
-		
+		            
 		<dependency>
 		    <groupId>javax.xml.bind</groupId>
 		    <artifactId>jaxb-api</artifactId>
@@ -80,6 +82,24 @@
 		    <version>2.1.2.RELEASE</version>
 		</dependency>
 				
+	
+	
+	
+	<dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>2.0.6.RELEASE</version>
+        </dependency>
+        <!-- mongodb -->
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>3.5.0</version>
+        </dependency>
+	
+	
+	
+	
 	</dependencies>
 
 	<build>
@@ -87,8 +107,10 @@
 			<plugins>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.2</version>
+					<artifactId>maven-war-plugin</artifactId>
+					<!-- <artifactId>maven-compiler-plugin</artifactId> -->
+					<!-- <version>3.2</version> -->
+					<version>2.4</version>
 					<configuration>
 						<verbose>true</verbose>
 						<source>1.8</source>
@@ -96,6 +118,20 @@
 						<showWarnings>true</showWarnings>
 					</configuration>
 				</plugin>
+				
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					 <artifactId>maven-compiler-plugin</artifactId>
+					 <version>3.2</version>
+					
+					<configuration>
+						<verbose>true</verbose>
+						<source>1.8</source>
+						<target>1.8</target>
+						<showWarnings>true</showWarnings>
+					</configuration>
+				</plugin>
+				
 				<plugin>
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
